Added classes for Pong's canvas; starting translation of Login's page.

--- a/pages/game.html
+++ b/pages/game.html
@@ -67,10 +67,10 @@
 						</div>
 					</div>
 					<div class="wrapper-mode-selectors">
-						<h3 class="translate-txt" aria-label="Choisissez le mode de jeu: ">Mode</h3>
+						<h3 class="translate-txt translate-aria-label" aria-label="Choisissez le mode de jeu: ">Mode</h3>
 						<div class="wrapper-mode-selector">
 							<label class="mode-selector">
-								<input disabled type="radio" name="mode" value="1vAI" aria-label="Joueur contre Ordinateur">
+								<input disabled class="translate-aria-label" type="radio" name="mode" value="1vAI" aria-label="Joueur contre Ordinateur">
 								<span class="wrapper-circle">
 									<span class="base-circle">
 										<span class="top-circle"></span>
@@ -79,7 +79,7 @@
 								<span class="mode-text translate-txt">1vIA</span>
 							</label>
 							<label class="mode-selector translate-title" title="Ce mode est désactivé sur téléphone et tablette">
-								<input type="radio" name="mode" value="1v1" aria-label="Joueur contre Joueur en local">
+								<input class="translate-aria-label" type="radio" name="mode" value="1v1" aria-label="Joueur contre Joueur en local">
 								<span class="wrapper-circle">
 									<span class="base-circle">
 										<span class="top-circle"></span>
@@ -88,7 +88,7 @@
 								<span class="mode-text translate-txt">1v1 local</span>
 							</label>
 							<label class="mode-selector translate-title" title="Ce mode est désactivé sur téléphone et tablette">
-								<input type="radio" name="mode" value="tournament" aria-label="Tournoi a 4 joueurs en local">
+								<input class="translate-aria-label" type="radio" name="mode" value="tournament" aria-label="Tournoi a 4 joueurs en local">
 								<span class="wrapper-circle">
 									<span class="base-circle">
 										<span class="top-circle"></span>
@@ -97,7 +97,7 @@
 								<span class="mode-text translate-txt">Tournoi local a 4</span>
 							</label>
 							<label class="mode-selector translate-title" title="Ce mode est désactivé si vous n'êtes pas connecté">
-								<input disabled type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne">
+								<input class="translate-aria-label" disabled type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne">
 								<span class="wrapper-circle">
 									<span class="base-circle">
 										<span class="top-circle"></span>
@@ -109,7 +109,7 @@
 					</div>
 				</div>
 				<div class="wrapper-submit-button">
-					<button id="selector" type="button" aria-label="Jouer !">
+					<button class="translate-aria-label" id="selector" type="button" aria-label="Jouer !">
 						<span class="coin-text translate-txt">Insérer une pièce</span>
 						<span class="wrapper-slot">
 							<span class="slot"></span>
@@ -147,12 +147,12 @@
 					</button>
 					<span class="translate-txt">Sélectionnez vos pseudonymes</span>
 					<div class="tournament-wrapper-inputs">
-						<input class="translate-pholder" type="text" name="p1" maxlength="30" placeholder="Joueur 1" aria-label="Pseudonyme du joueur 1">
-						<input class="translate-pholder" type="text" name="p2" maxlength="30" placeholder="Joueur 2" aria-label="Pseudonyme du joueur 2">
-						<input class="translate-pholder" type="text" name="p3" maxlength="30" placeholder="Joueur 3" aria-label="Pseudonyme du joueur 3">
-						<input class="translate-pholder" type="text" name="p4" maxlength="30" placeholder="Joueur 4" aria-label="Pseudonyme du joueur 4">
+						<input class="translate-pholder translate-aria-label" type="text" name="p1" maxlength="30" placeholder="Joueur 1" aria-label="Pseudonyme du joueur 1">
+						<input class="translate-pholder translate-aria-label" type="text" name="p2" maxlength="30" placeholder="Joueur 2" aria-label="Pseudonyme du joueur 2">
+						<input class="translate-pholder translate-aria-label" type="text" name="p3" maxlength="30" placeholder="Joueur 3" aria-label="Pseudonyme du joueur 3">
+						<input class="translate-pholder translate-aria-label" type="text" name="p4" maxlength="30" placeholder="Joueur 4" aria-label="Pseudonyme du joueur 4">
 					</div>
-					<button class="translate-txt" type="button" aria-label="Valider">Valider</button>
+					<button class="translate-txt translate-aria-label" type="button" aria-label="Valider">Valider</button>
 				</form>
 				<div class="wrapper-options hidden">
 					<button type="button" class="cross-button">
