--- a/pages/login.html
+++ b/pages/login.html
@@ -1,5 +1,5 @@
 <main class="login-page d-flex justify-content-center align-items-center h-100">
-	<div class="container-fluid w-25 h-75 px-3 py-5 d-flex flex-column justify-content-between align-items-center my-card">
+	<div class="container-fluid position-relative w-25 h-75 px-3 py-5 d-flex flex-column justify-content-between align-items-center my-card">
 		<form class="w-100 form-group text-center d-flex flex-column" autocomplete="on">
 			<h1 class="text-center mb-5 font-weight-bolder text-break">ft_transcendance</h1>
 			<input name="email" type="email" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group" placeholder="Email" aria-label="Email" aria-describedby="emailHelp">
@@ -10,10 +10,10 @@
 				<input name="password" type="password" minlength="10" class="form-control pr-5 border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group password" placeholder="Mot de passe" aria-label="Mot de passe">
 			</div>
 			<input name="username" type="text" minlength="1" maxlength="30" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group username hidden" placeholder="Nom d'utilisateur" aria-label="Nom d'utilisateur">
-			<button type="submit" class="w-100 py-2 mb-1 text-break submit">Connexion</button>
-			<button type="button" class="mx-auto border-0 forgot-password" aria-label="Mot de passe oublie">Mot de passe oublié</button>
-			<button type="button" class="mx-auto mt-2 signup" aria-label="Inscription">Inscription</button>
-			<button type="button" class="mx-auto mt-2 cancel-signup hideInFade" aria-label="Annuler">Annuler</button>
+			<button type="submit" class="w-100 py-2 mb-1 text-break submit translate-text">Connexion</button>
+			<button type="button" class="mx-auto border-0 forgot-password translate-text" aria-label="Mot de passe oublie">Mot de passe oublié</button>
+			<button type="button" class="mx-auto mt-2 signup translate-text" aria-label="Inscription">Inscription</button>
+			<button type="button" class="mx-auto mt-2 cancel-signup hideInFade translate-text" aria-label="Annuler">Annuler</button>
 		</form>
 		<div class="w-100 text-center special-login">
 			<button class="w-100 py-2 my-1 text-break login-42" aria-label="Connexion avec 42">
@@ -24,12 +24,23 @@
 					<polygon points="762.7,114.2 597.9,279.1 597.9,443.9 762.7,443.9 762.7,279.1 928,114.2 928,-51.1 762.7,-51.1 "/>
 					<polygon points="928,279.1 762.7,443.9 928,443.9 "/>
 				</svg>
-				Continuer avec 42
+				<span class="translate-text">Continuer avec 42</span>
 			</button>
 			<button class="w-100 py-2 my-1 text-break special-login-guest" aria-label="Jouer sans se connecter">
 				<img src="/svg/incognito.svg" class="svg"/>
-				Continuer en tant qu'Invite
+				<span class="translate-text">Continuer en tant qu'Invite</span>
 			</button>
 		</div>
+		<select class="mt-2">
+			<option value="fr">
+				<span>Français</span>
+			</option>
+			<option value="en">
+				<span>English</span>
+			</option>
+			<option value="vl">
+				<span>Vlaanderen</span>
+			</option>
+		</select>
 	</div>
 </main>
