Fixed HTML/CSS official errors.

--- a/pages/login.html
+++ b/pages/login.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid position-relative w-25 h-75 px-3 py-5 d-flex flex-column justify-content-between align-items-center my-card">
 		<form class="w-100 form-group text-center d-flex flex-column" autocomplete="on">
 			<h1 class="text-center mb-5 font-weight-bolder text-break">ft_transcendance</h1>
-			<input name="email" type="email" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group translate-pholder translate-aria-label" placeholder="Email" aria-label="Email" aria-describedby="emailHelp">
+			<input name="email" type="email" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group translate-pholder translate-aria-label" placeholder="Email" aria-label="Email">
 			<div class="position-relative">
 				<input name="password" type="password" minlength="10" class="form-control pr-5 border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group password translate-pholder translate-aria-label" placeholder="Mot de passe" aria-label="Mot de passe">
 				<button type="button" class="position-absolute border-0 show-password">
@@ -18,7 +18,7 @@
 		<div class="w-100 text-center">
 			<div class="w-100 text-center special-login">
 				<button class="w-100 py-2 my-1 text-break login-42 translate-aria-label" aria-label="Connexion avec 42">
-					<svg version="1.1" sodipodi:docname="42_logo.svg" inkscape:version="0.48.2 r9819" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 -200 960 960" enable-background="new 0 -200 960 960" xml:space="preserve" class="svg">
+					<svg version="1.1" x="0px" y="0px" viewBox="0 -200 960 960" enable-background="new 0 -200 960 960" xml:space="preserve" class="svg">
 						<polygon points="32,412.6 362.1,412.6 362.1,578 526.8,578 526.8,279.1 197.3,279.1 526.8,-51.1 362.1,-51.1
 						32,279.1 "/>
 						<polygon points="597.9,114.2 762.7,-51.1 597.9,-51.1 "/>
@@ -28,20 +28,14 @@
 					<span class="translate-text">Continuer avec 42</span>
 				</button>
 				<button class="w-100 py-2 my-1 text-break special-login-guest translate-aria-label" aria-label="Jouer sans se connecter">
-					<img src="/svg/incognito.svg" class="svg"/>
+					<img class="svg" src="/svg/incognito.svg" alt="Incognito logo">
 					<span class="translate-text">Continuer en tant qu'Invite</span>
 				</button>
 			</div>
 			<select class="mt-2">
-				<option value="fr">
-					<span>Français</span>
-				</option>
-				<option value="en">
-					<span>English</span>
-				</option>
-				<option value="vl">
-					<span>Vlaanderen</span>
-				</option>
+				<option value="fr">Français</option>
+				<option value="en">English</option>
+				<option value="vl">Vlaanderen</option>
 			</select>
 		</div>
 	</div>
