--- a/retourVm/transcendance/services/webserver/index.html
+++ b/retourVm/transcendance/services/webserver/index.html
@@ -118,7 +118,7 @@
         (function() {
             // Connexion au WebSocket
             //const socket = new WebSocket('ws://localhost:8080/ws/chat/');
-            const socket = new WebSocket('ws://made-f0Ar10s5:8080/ws/chat/');
+            const socket = new WebSocket('wss://made-f0Ar13s3:4433/ws/chat/');
     
             // Lorsque la connexion est ouverte
             socket.onopen = function(event) {
