Add some dutch translations

--- a/pages/game.html
+++ b/pages/game.html
@@ -183,8 +183,8 @@
 											<input type="radio" name="lang" value="en">
 										</label>
 										<label class="lang-label">
-											<img class="flag-vlaaderen" src="https://upload.wikimedia.org/wikipedia/commons/e/eb/Generieke_vlag_van_Vlaanderen.svg" alt="Drapeau Vlaaderen">
-											<span>Vlaanderen</span>
+											<img class="flag-Netherlands" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="Drapeau Pays-Bas">
+											<span>Nederlands</span>
 											<input type="radio" name="lang" value="vl">
 										</label>
 									</div>
