--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@
 			<select class="mt-2">
 				<option value="fr">Français</option>
 				<option value="en">English</option>
-				<option value="vl">Vlaanderen</option>
+				<option value="vl">Nederlands</option>
 			</select>
 		</div>
 	</div>
