Fixed few problems with NL.

--- a/pages/game.html
+++ b/pages/game.html
@@ -183,9 +183,9 @@
 											<input type="radio" name="lang" value="en">
 										</label>
 										<label class="lang-label">
-											<img class="flag-Netherlands" src="https://upload.wikimedia.org/wikipedia/commons/2/20/Flag_of_the_Netherlands.svg" alt="Drapeau Pays-Bas">
+											<span class="fi fi-nl"></span>
 											<span>Nederlands</span>
-											<input type="radio" name="lang" value="vl">
+											<input type="radio" name="lang" value="nl">
 										</label>
 									</div>
 									<p class="translate-txt">N'oubliez pas de sauvegarder pour appliquer votre choix à la prochaine connexion</p>
