--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="../index.css">
 		<script src="../js/game.js" defer></script>
+		<script src="../js/Tetrominos.js" defer></script>
 		<script src="../js/tetris.js" defer></script>
 		<script src="../js/pong.js" defer></script>
 		<script src="../js/login.js" defer></script>
