Changed img's alts.

--- a/pages/game.html
+++ b/pages/game.html
@@ -8,7 +8,7 @@
 		<ul>
 			<li class="nav-user translate-title" title="Voir mon historique">
 				<button>
-					<img src="/favicon.ico" alt="Avatar de l'utilisateur">
+					<img src="/favicon.ico" alt="Avatar">
 					<span>Alexioos95</span>
 					<i class="fa-solid fa-clock-rotate-left"></i>
 				</button>
@@ -248,7 +248,7 @@
 									<td tabindex="0">
 										<div class="blocked-card">
 											<div class="blocked-user-avatar">
-												<img src="/favicon.ico" alt="Avatar de l'utilisateur">
+												<img src="/favicon.ico" alt="Avatar">
 											</div>
 											<div class="blocked-user">
 												<span>User</span>
@@ -269,15 +269,15 @@
 				<div class="wrapper-player-controls">
 					<span class="playername playername-left"></span>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="/svg/rotate/left.svg" alt="Tourner à gauche">
+						<img class="rotate" src="/svg/rotate/left.svg" alt="">
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="/svg/rotate/right.svg" alt="Tourner à droite">
+						<img class="rotate" src="/svg/rotate/right.svg" alt="">
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="stick" src="/svg/stick/state0.svg" alt="Stick analogique (décoration)">
+						<img class="stick" src="/svg/stick/state0.svg" alt="">
 						<div class="wrapper-controls-keys">
 							<div class="key key-top"></div>
 							<div class="key key-left"></div>
@@ -289,15 +289,15 @@
 				<div class="wrapper-player-controls">
 					<span class="playername playername-right"></span>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="/svg/rotate/left.svg" alt="Tourner à gauche">
+						<img class="rotate" src="/svg/rotate/left.svg" alt="">
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="rotate" src="/svg/rotate/right.svg" alt="Tourner à droite">
+						<img class="rotate" src="/svg/rotate/right.svg" alt="">
 						<div class="key"></div>
 					</div>
 					<div class="wrapper-controls-svg">
-						<img class="stick" src="/svg/stick/state0.svg" alt="Stick analogique (décoration)">
+						<img class="stick" src="/svg/stick/state0.svg" alt="">
 						<div class="wrapper-controls-keys">
 							<div class="key key-top"></div>
 							<div class="key key-left"></div>
@@ -378,7 +378,7 @@
 								<td tabindex="0">
 									<div class="chat-message">
 										<div class="chat-user-avatar">
-											<img src="/favicon.ico" alt="Avatar de l'utilisateur">
+											<img src="/favicon.ico" alt="Avatar">
 										</div>
 										<p><span>User</span>: MSG</p>
 									</div>
@@ -402,7 +402,7 @@
 								<td tabindex="0">
 									<div class="chat-message">
 										<div class="chat-user-avatar">
-											<img src="/favicon.ico" alt="Avatar de l'utilisateur">
+											<img src="/favicon.ico" alt="Avatar">
 										</div>
 										<p><span>User</span>: MSG</p>
 									</div>
@@ -430,7 +430,7 @@
 								<td tabindex="0">
 									<div class="friend-card">
 										<div class="friend-user-avatar">
-											<img src="/favicon.ico" alt="Avatar de l'utilisateur">
+											<img src="/favicon.ico" alt="Avatar">
 										</div>
 										<div class="friend-user">
 											<div>
@@ -456,7 +456,7 @@
 								<td tabindex="0">
 									<div class="friend-card">
 										<div class="friend-user-avatar">
-											<img src="/favicon.ico" alt="Avatar de l'utilisateur">
+											<img src="/favicon.ico" alt="Avatar">
 										</div>
 										<div class="friend-user">
 											<div>
