--- a/pages/login.html
+++ b/pages/login.html
@@ -29,7 +29,7 @@
 						<span class="translate-text">Continuer avec 42</span>
 					</button>
 					<button class="w-100 py-2 my-1 text-break special-login-guest translate-aria-label" aria-label="Jouer sans se connecter">
-						<img class="svg" src="/svg/incognito.svg" alt="Incognito logo">
+						<img class="svg" src="/svg/incognito.svg" alt="">
 						<span class="translate-text">Continuer en tant qu'Invite</span>
 					</button>
 				</div>
