Fixed issue with lang values in Login's page; Prepared for translation of tabs options.

--- a/pages/login.html
+++ b/pages/login.html
@@ -36,7 +36,7 @@
 				<select class="mt-2">
 					<option value="fr">Français</option>
 					<option value="en">English</option>
-					<option value="vl">Nederlands</option>
+					<option value="nl">Nederlands</option>
 				</select>
 			</div>
 		</div>
