--- a/pages/game.html
+++ b/pages/game.html
@@ -78,7 +78,7 @@
 								</span>
 								<span class="mode-text translate-txt">1vIA</span>
 							</label>
-							<label class="mode-selector translate-title" title="Ce mode est désactivé sur téléphone et tablette">
+							<label class="mode-selector translate-title">
 								<input class="translate-aria-label" type="radio" name="mode" value="1v1" aria-label="Joueur contre Joueur en local">
 								<span class="wrapper-circle">
 									<span class="base-circle">
@@ -87,7 +87,7 @@
 								</span>
 								<span class="mode-text translate-txt">1v1 local</span>
 							</label>
-							<label class="mode-selector translate-title" title="Ce mode est désactivé sur téléphone et tablette">
+							<label class="mode-selector translate-title">
 								<input class="translate-aria-label" type="radio" name="mode" value="tournament" aria-label="Tournoi a 4 joueurs en local">
 								<span class="wrapper-circle">
 									<span class="base-circle">
@@ -96,7 +96,7 @@
 								</span>
 								<span class="mode-text translate-txt">Tournoi local a 4</span>
 							</label>
-							<label class="mode-selector translate-title" title="Ce mode est désactivé si vous n'êtes pas connecté">
+							<label class="mode-selector translate-title">
 								<input class="translate-aria-label" type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne">
 								<span class="wrapper-circle">
 									<span class="base-circle">
