Reused lock for Guest mode.

--- a/pages/game.html
+++ b/pages/game.html
@@ -361,6 +361,7 @@
 					</button>
 				</div>
 				<div class="wrapper-tabs-tables tab-tabs">
+					<i class="fa-solid fa-lock hidden"></i>
 					<table class="tab-chat active">
 						<tbody>
 							<tr class="tab-chat-lock hidden">
