Draft for back's fetch.

--- a/pages/login.html
+++ b/pages/login.html
@@ -1,7 +1,7 @@
 <main class="login-page d-flex justify-content-center align-items-center h-100">
 	<div class="container-fluid position-relative w-25 h-75 px-0 overflow-hidden my-card">
 		<div class="w-100 h-100 px-3 py-5 d-flex flex-column justify-content-between align-items-center overflow-auto">
-			<form class="w-100 form-group text-center d-flex flex-column" autocomplete="on">
+			<form method="POST" class="w-100 form-group text-center d-flex flex-column" autocomplete="on">
 				<h1 class="text-center mb-5 font-weight-bolder text-break">ft_transcendance</h1>
 				<input name="email" type="email" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group translate-pholder translate-aria-label" placeholder="Email" aria-label="Email">
 				<div class="position-relative">
