Drafted fetchs for updateUserInfos, matchMaking and resetPasswd.

--- a/retourVm/transcendance/services/webserver/html/game.html
+++ b/retourVm/transcendance/services/webserver/html/game.html
@@ -194,7 +194,7 @@
 									<h4 class="translate-txt">Avatar</h4>
 									<label>
 										<span class="translate-txt">Changer mon avatar:</span>
-										<input type="file">
+										<input type="file" name="avatar">
 									</label>
 								</div>
 								<div class="options-section options-div">
@@ -222,7 +222,7 @@
 										</div>
 									</div>
 								</div>
-								<button class="translate-txt" type="submit">Sauvegarder</button>
+								<button class="options-save translate-txt" type="submit">Sauvegarder</button>
 								<div class="options-section">
 									<h4 class="translate-txt">Authentification à deux facteurs</h4>
 									<div class="options-wrapper-2fa">
